# AdventOfCode2024

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
day1/: CMakeLists.txt
lib/: CMakeLists.txt
lib/CUTE/cute/: cute.h
